2004-11-10  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcellrenderercombo.xml Add.
	* pygtk-gtkcellrendererprogress.xml Add.
	* pygtk-gtkcellview.xml Add.
	* pygtk-gtk-classes.xml Add above files.

2004-11-09  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaboutdialog.xml Add.

	* pygtk-gtk-classes.xml Add pygtk-gtkaboutdialog.xml

2004-11-08  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwindow.xml (Description, gtk.Window, set_position):
	Add link to appropriate Constants description.

2004-11-01  John Finlay  <finlay@moeraki.com>

	* pygtk-gtksettings.xml Add gtk-alternative-button-order and
	gtk-modules properties. Fix typo.

2004-10-28  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcombobox.xml (set_model) model can be and default to None
	in PyGTK 2.4.1.

	* pygtk-gtkentrycompletion.xml (set_model) model can be and default
	to None in PyGTK 2.4.1.

2004-10-21  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkalignment.xml (gtk.Alignment) Undo changes since new
	default values are wrong.

2004-10-19  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkalignment.xml (gtk.Alignment) Note change of default values
	in 2.4. (Gustavo Niemeyer)

2004-10-12  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml ("destroy-event") Add description per
	Christian Reis.

	* pygtk-gtkstatusbar.xml (push) Note that the message id can be used
	with the remove() method. (Rafael Villar Burke)
	
	* pygtk-gtkwidget.xml (modify_bg) Note that bg can only be
	modified on widgets with a gdkWindow. (Rafael Villar Burke)

	* pygtk-gtkadjustment.xml (Description) Fix broken links reported by
	Antoon Pardon.

2004-10-05  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Bump version number and set pubdate

	* pygtk-gdkgc.xml (set_clip_rectangle) Note that the clip origin
	is also set to (0, 0) per Rafael Villar Burke.

	================ 2.4.11 ==============
2004-10-03  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Set pubdate.
	