@@ -1,5 +1,8 @@
 2004-11-10  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtkclipboard.xml (wait_is_target_available)
+	(set_can_store, store): Add documentation on these PyGTK 2.5 methods
+
 	* pygtk-gtkcellrenderercombo.xml Add.
 	* pygtk-gtkcellrendererprogress.xml Add.
 	* pygtk-gtkcellview.xml Add.
